manifests/change-detector/deploy-cd.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: change-detector
  namespace: change-detector
spec:
  serviceName: change-detector
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: change-detector
  template:
    metadata:
      labels:
        app: change-detector
        name: change-detector
    spec:
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: change-detector
        image: ghcr.io/dgtlmoon/changedetection.io:0.49.3
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 50m
            memory: 200Mi
          limits:
            # cpu: 150m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: change-detector-data
          mountPath: /datastore
      automountServiceAccountToken: false
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      volumes:
      - name: change-detector-data
        persistentVolumeClaim:
          claimName: change-detector-data
