manifests/change-detector/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: playwright-chrome
  name: playwright-chrome
  namespace: change-detector
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: web
  selector:
    app: playwright-chrome
