manifests/change-detector/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: change-detector
  namespace: change-detector
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "changedetector.ucdialplans.com"
  rules:
  - backendRefs:
    - name: change-detector
      namespace: change-detector
      kind: Service
      port: 5000
